(Bug 5073) Fix top bar being cut off at the right in gradation-vert

--- a/htdocs/scss/schemes/_nav.scss
+++ b/htdocs/scss/schemes/_nav.scss
@@ -89,7 +89,8 @@ $nav-small-screen-header-height: 3em;
     #header-search {
         position: absolute;
         top: $header-height + $search-offset;
-        right: 2em;
+        right: 0;
+        padding-right: 2em;
 
         ul {
             list-style: none;
